# B3Wallet

./: .env.iclocal  .env.local  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .gitmodules  .yarnrc.yml  Cargo.toml  LICENSE  README.md  canister_ids.json  components.json  dfx.json  dfx.webpack.config.js  next.config.js  package-lock.json  package.json  predeploy.sh  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
backend/b3_shared/: Cargo.toml
backend/b3_shared/src/: canister.rs  constants.rs  error.rs  identifier.rs  lib.rs  signer.rs  subaccount.rs  types.rs
backend/b3_signer_lib/: Cargo.toml
backend/b3_signer_lib/src/: account.rs  allowance.rs  error.rs  lib.rs  request.rs  signed.rs  signer.rs  state.rs  store.rs  types.rs  utils.rs
backend/b3_signer_lib/src/ledger/: config.rs  constants.rs  ledger.rs  mod.rs  public_keys.rs  subaccount.rs  types.rs
backend/b3_signer_lib/src/request/: bitcoin.rs  evm.rs  icp.rs  inner.rs  message.rs  mod.rs  sign.rs
backend/b3_system/: Cargo.toml  b3_system.did
backend/b3_system/src/: canister.rs  control.rs  controller.rs  guard.rs  guards.rs  lib.rs  release.rs  state.rs  status.rs  store.rs  test.rs  types.rs  user.rs  wallet.rs  wasm.rs
backend/b3_system/src/release/: mod.rs  query.rs  update.rs  wasm.rs
backend/b3_system/src/signer/: mod.rs  query.rs  update.rs  utils.rs
backend/b3_system/src/user/: mod.rs  query.rs  update.rs
backend/b3_user_lib/: Cargo.toml
backend/b3_user_lib/src/: account.rs  allowance.rs  btc.rs  calls.rs  chain.rs  config.rs  derivation.rs  ecdsa.rs  env.rs  error.rs  evm_tx.rs  identifier.rs  keys.rs  lib.rs  mocks.rs  public_key.rs  request.rs  signed.rs  state.rs  store.rs  subaccount.rs  transaction.rs  types.rs  utils.rs
backend/b3_user_lib/src/ledger/: config.rs  constants.rs  ecdsa.rs  identifier.rs  keys.rs  ledger.rs  mod.rs  network.rs  public_keys.rs  subaccount.rs  types.rs
backend/b3_wallet/: Cargo.toml  b3_wallet.did
backend/b3_wallet/src/: account.rs  confirm.rs  didjs.rs  guard.rs  helper.rs  lib.rs  permit.rs  processed.rs  request.rs  setting.rs  signer.rs  status.rs  wallet.rs  wasm.rs
backend/b3_wallet_lib/: Cargo.toml
backend/b3_wallet_lib/examples/: ecdsa-psbt.rs
backend/b3_wallet_lib/src/: account.rs  counter.rs  error.rs  evm_tx.rs  lib.rs  signed.rs  signer.rs  state.rs  store.rs  types.rs  utils.rs  wasm.rs
backend/b3_wallet_lib/src/confirmed/: mod.rs  state.rs
backend/b3_wallet_lib/src/evm/: mod.rs  tx1559.rs  tx2930.rs  txlegacy.rs
backend/b3_wallet_lib/src/ledger/: btc.rs  chains.rs  config.rs  constants.rs  keys.rs  ledger.rs  mod.rs  network.rs  public_keys.rs  subaccount.rs  types.rs  utils.rs
backend/b3_wallet_lib/src/ledger/btc/: mod.rs  network.rs  utxo.rs
backend/b3_wallet_lib/src/request/: bitcoin.rs  btc.rs  evm.rs  icp.rs  inner.rs  inter.rs  message.rs  mod.rs  sign.rs  state.rs  test.rs  test2.rs  test3.rs  test4.rs
backend/b3_wallet_lib/src/request/evm/: mod.rs  other.rs  sign.rs  transfer.rs
backend/b3_wallet_lib/src/request/inner/: account.rs  mod.rs  setting.rs  signer.rs
backend/b3wallet/: Cargo.toml  b3wallet.did
backend/b3wallet/src/: guard.rs  lib.rs
backend/b3wallet_basic/: Cargo.toml  b3wallet_basic.did
backend/b3wallet_basic/src/: lib.rs
backend/lib/b3_helper_lib/: Cargo.toml  README.md
backend/lib/b3_helper_lib/src/: account.rs  amount.rs  constants.rs  environment.rs  error.rs  identifier.rs  impls.rs  lib.rs  mocks.rs  owner.rs  release.rs  subaccount.rs  time.rs  tokens.rs  types.rs  wasm.rs
backend/lib/b3_helper_lib/src/account/: error.rs  icrc_account.rs  mod.rs  test.rs
backend/lib/b3_helper_lib/src/account_identifier/: mod.rs  test.rs
backend/lib/b3_helper_lib/src/amount/: test.rs  token_amount.rs
backend/lib/b3_helper_lib/src/constants/: constants.rs  mod.rs  test.rs
backend/lib/b3_helper_lib/src/environment/: environment.rs  mod.rs  test.rs
backend/lib/b3_helper_lib/src/error/: helper_error.rs  mod.rs  notify_error.rs  transfer_error.rs
backend/lib/b3_helper_lib/src/icp_notify/: error.rs  mod.rs
backend/lib/b3_helper_lib/src/icp_token/: mod.rs
backend/lib/b3_helper_lib/src/icp_transfer/: error.rs  mod.rs
backend/lib/b3_helper_lib/src/icrc_account/: mod.rs  test.rs
backend/lib/b3_helper_lib/src/identifier/: account_identifier.rs  error.rs  mod.rs  test.rs
backend/lib/b3_helper_lib/src/ledger/: mod.rs  types.rs
backend/lib/b3_helper_lib/src/notify/: error.rs  types.rs
backend/lib/b3_helper_lib/src/owner/: mod.rs  owner.rs
backend/lib/b3_helper_lib/src/release/: mod.rs
backend/lib/b3_helper_lib/src/subaccount/: error.rs  mod.rs  subaccount.rs  test.rs
backend/lib/b3_helper_lib/src/system/: mod.rs  types.rs
backend/lib/b3_helper_lib/src/timestamp/: mod.rs  nano.rs
backend/lib/b3_helper_lib/src/token/: test.rs
backend/lib/b3_helper_lib/src/transfer/: error.rs  (+3 more)
backend/lib/b3_operations/: Cargo.toml
backend/lib/b3_operations/src/: error.rs  lib.rs  nonce.rs  operation.rs  pending.rs  processed.rs  role.rs  state.rs  store.rs  types.rs  user.rs
backend/lib/b3_permit_lib/: Cargo.toml  README.md
backend/lib/b3_permit_lib/src/: counter.rs  error.rs  lib.rs  mocks.rs  nonce.rs  state.rs  store.rs  types.rs
backend/lib/b3_utils/: .gitignore  Cargo.toml  README.md
backend/lib/b3_utils/examples/: Cargo.toml  README.md  build.sh  canister_ids.json  dfx-start.sh  dfx.json  did.sh  package.json  test.sh
backend/lib/b3_utils/src/: constants.rs  environment.rs  error.rs  http.rs  ledger.rs  lib.rs  log.rs  logs.rs  memory.rs  mocks.rs  nonce.rs  partition.rs  subaccount.rs  timestamp.rs  types.rs  utils.rs  vetkd.rs  wasm.rs
backend/lib/b3_wallet_lib/: Cargo.toml
backend/lib/b3_wallet_lib/src/: account.rs  counter.rs  error.rs  lib.rs  nonces.rs  setting.rs  state.rs  store.rs  types.rs
lib/b3_link_lib/: Cargo.toml
lib/b3_link_lib/src/: counter.rs  error.rs  lib.rs  mocks.rs  state.rs  store.rs  types.rs
lib/b3_link_lib/src/confirmed/: mod.rs  state.rs
lib/b3_link_lib/src/pending/: mod.rs  state.rs
lib/b3_link_lib/src/signer/: state.rs
(+936 files in other folders)
