[workspace]
members = [
    "backend/b3_system",
    "backend/b3_wallet",
    "backend/lib/b3_system_lib",
    "backend/lib/b3_wallet_lib",
    "backend/lib/b3_operations",
]

[workspace.dependencies]
serde = "1"
candid = "0.10"
ic-cdk = "0.12"
async-trait = "0.1"
enum_dispatch = "0.3"
ciborium = "0.2"
b3_utils = { path = "backend/lib/b3_utils" }
