[workspace]
resolver = "2"
members = [
    "backend/b3system",
    "backend/b3wallet",
    "backend/b3wallet_basic",
    "backend/lib/b3system_lib",
    "backend/lib/b3wallet_lib",
    "backend/lib/operations",
]

[workspace.dependencies]
serde = "1"
candid = "0.10"
ic-cdk = "0.13"
async-trait = "0.1"
enum_dispatch = "0.3"
ciborium = "0.2"
b3_utils = { path = "backend/lib/b3_utils" }
