[package]
name = "b3_system"
version = "0.0.0-beta.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
b3_system_lib = { path = "../lib/b3_system_lib" }
b3_utils = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", rev = "release-2023-08-01_23-01" }
