[package]
name = "b3_wallet"
version = "0.0.0-alpha.33"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
b3_wallet_lib = { path = "../lib/b3_wallet_lib" }
b3_permit_lib = { path = "../lib/b3_permit_lib" }
b3_helper_lib = { path = "../lib/b3_helper_lib" }
candid = { workspace = true }
ic-cdk = { workspace = true }