[package]
name = "b3_wallet"
version = "0.0.0-beta.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
b3_wallet_lib = { path = "../lib/b3_wallet_lib" }
b3_operations = { path = "../lib/b3_operations" }
b3_utils = { workspace = true, features = ["logging"] }
candid = { workspace = true }
ic-cdk = { workspace = true }
