[package]
name = "b3_wallet_lib"
version = "0.1.0"
edition = "2021"
description = "This is wallet library for the B3Pay project."
license = "Apache-2.0"
readme = "./README.md"

[dependencies]
b3_helper = { path = "../b3_helper" }
enum_dispatch = "0.3"
ethereum-rlp = "0.2.3"
easy-hasher = "2.2.1"
candid = "0.8.4"
ic-cdk = "0.7.4"
serde = "1"
futures = "0.3.28"
ripemd = "0.1.3"
bitcoin = { version = "0.30.0", default-features = false,  features = [ "no-std", "secp-recovery", "secp-lowmemory"] }