[package]
name = "b3_wallet_lib"
version = "0.1.0"
edition = "2021"
description = "This is wallet library for the B3Pay project."
license = "Apache-2.0"
readme = "./README.md"

[dependencies]
b3_helper = { path = "../b3_helper" }
enum_dispatch = "0.3"
ethereum-rlp = "0.2.3"
candid = "0.8.4"
ic-cdk = "0.7.4"
serde = "1"
# bitcoin = { version = "0.30.0", default-features = false,  features = [ "no-std", "secp-recovery", "secp-lowmemory"] }
bitcoin = "0.30.0"

[[example]]
name = "ecdsa-psbt"