[package]
name = "b3wallet"
version = "0.0.0-beta.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
b3wallet_lib = { path = "../lib/b3wallet_lib" }
operations = { path = "../lib/operations" }
b3_utils = { workspace = true, features = ["logging"] }
candid = { workspace = true }
ic-cdk = { workspace = true }
