[package]
name = "b3_helper_lib"
version = "0.0.1"
edition = "2021"
description = "This is shared library for B3Pay project"
license = "Apache-2.0"
readme = "./README.md"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { version = "1.0.163", features = ["derive"] }
serde_bytes = "0.11.9"
easy-hasher = "2.2.1"