[package]
name = "b3_helper_lib"
version = "0.0.3"
edition = "2021"
description = "This is helper library for B3Wallet project"
license = "MIT"
readme = "./README.md"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { version = "1.0.171", features = ["derive"] }
hex = "0.4.3"
serde_bytes = "0.11.12"
easy-hasher = "2.2.1"