[package]
name = "b3_permit_lib"
version = "0.1.2"
edition = "2021"
description = "This is request library for the B3Pay project."
license = "Apache-2.0"
readme = "./README.md"

[dependencies]
b3_helper_lib = { path = "../b3_helper_lib" }
b3_wallet_lib = { path = "../b3_wallet_lib" }
candid = { workspace = true }
ic-cdk = { workspace = true }
async-trait = "0.1.68"
enum_dispatch = "0.3.11"
serde = "1"