[package]
name = "b3_utils"
version = "0.3.12"
edition = "2021"
description = "This is helper library for B3Wallet project"
license = "MIT"
readme = "./README.md"

[dependencies]
ic-cdk = { version = "0.11.0", features = ["transform-closure"] }
serde = { version = "1.0", features = ["derive"] }
candid = "0.9"
hex = "0.4"
serde_bytes = "0.11"
easy-hasher = { version = "2.2", optional = true }
sha2 = { version = "0.9", optional = true }
subtle = { version = "2.5", optional = true }
ic-stable-structures = { git = "https://github.com/b3hr4d/stable-structures", rev = "7cca5850650d4f9c936fc7c09ca6af13b3911af2", optional = true }
ic_bls12_381 = { version = "0.8", optional = true, default-features = false, features = [
    "pairings",
    "alloc",
    "experimental",
] }

[features]
vetkd = ["ic_bls12_381", "sha2", "subtle"]
stable_memory = ["ic-stable-structures"]
ledger = ["easy-hasher"]
wasm = ["easy-hasher"]
logging = []
owner = []
