[package]
name = "b3_wallet_lib"
version = "0.1.33"
edition = "2021"
description = "This is wallet library for the B3Wallet project."
license = "Apache-2.0"
readme = "./README.md"

[dependencies]
serde = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
b3_utils = { path = "../b3_utils" }
hex = "0.4"
serde_bytes = "0.11"
async-trait = "0.1"
enum_dispatch = "0.3"
ethereum-rlp = "0.2"
bitcoin = { version = "0.30", default-features = false,  features = [ "no-std", "secp-recovery", "secp-lowmemory"] }