[package]
name = "b3_wallet_lib"
version = "0.1.33"
edition = "2021"
description = "This is wallet library for the B3Wallet project."
license = "Apache-2.0"
readme = "./README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
candid = { workspace = true }
ic-cdk = { workspace = true }
async-trait = { workspace = true }
enum_dispatch = { workspace = true }
b3_utils = { workspace = true, features = ["stable_memory", "ledger"] }

hex = "0.4"
ciborium = "0.2"
serde_bytes = "0.11"
ethereum-rlp = "0.2"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
bitcoin = { version = "0.30", default-features = false, features = [
    "no-std",
    "secp-recovery",
    "secp-lowmemory",
] }
