[package]
name = "stable_memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ciborium = "0.2"
candid = "0.9"
ic-cdk = { workspace = true }
ic0 = "0.18.11"
serde = { version = "1.0", features = ["derive"] }
b3_utils = { workspace = true, features = ["logging", "stable_memory"] }
