[package]
name = "vetkd_notes"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
lazy_static = "1.4"
serde_json = "1.0"
anyhow = "1.0.43"
serde = "1.0.133"
ic-types = "0.7.0"
hex = "0.4"
candid = "0.9"
serde_bytes = "0.11"